- Fixed bug #47845 (PDO_Firebird omits first row from query). (Lars W)
- Fixed bug #47831 (Compile warning for strnlen() in main/spprintf.c).
  (Ilia, rainer dot jung at kippdata dot de)
- Fixed bug #47828 (openssl_x509_parse() segfaults when a UTF-8 conversion
  fails). (Scott, Kees Cook, Pierre)
- Fixed bug #47818 (Segfault due to bound callback param). (Felipe)
- Fixed bug #47769 (Strange extends PDO). (Felipe)
- Fixed bug #47745 (FILTER_VALIDATE_INT doesn't allow minimum integer).
  (Dmitry)
- Fixed bug #47721 (Alignment issues in mbstring and sysvshm extension)
  (crrodriguez at opensuse dot org, Ilia)
- Fixed bug #47704 (PHP crashes on some "bad" operations with string offsets).
  (Dmitry)
- Fixed bug #47667 (ZipArchive::OVERWRITE seems to have no effect).
  (Mikko, Pierre)
- Fixed bug #47644 (Valid integers are truncated with json_decode()). (Scott)
- Fixed bug #47639 (pg_copy_from() WARNING: nonstandard use of \\ in a string
  literal). (Ilia)
- Fixed bug #47616 (curl keeps crashing). (Felipe)
- Fixed bug #47598 (FILTER_VALIDATE_EMAIL is locale aware). (Ilia)
- Fixed bug #47487 (performance degraded when reading large chunks after fix of
  bug #44607). (Arnaud)
- Fixed bug #47435 (FILTER_FLAG_NO_PRIV_RANGE does not work with ipv6
  addresses in the filter extension). (Ilia)
- Fixed bug #47430 (Errors after writing to nodeValue parameter of an absent 
  previousSibling). (Rob)
- Fixed bug #46882 (Serialize / Unserialize misbehaviour under OS with
  different bit numbers). (Matt)
- Fixed bug #45799 (imagepng() crashes on empty image). (Martin McNickle,
  Takeshi Abe)
- Fixed bug #43073 (TrueType bounding box is wrong for angle<>0).
  (Martin McNickle)
- Fixed bug #38805 (PDO truncates text from SQL Server text data type
  field). (Steph)

26 Feb 2009, PHP 5.2.9
- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)

- Added optional sorting type flag parameter to array_unique(). Default is